Bug 420577 - changing icon sizes no longer emits signal
Summary: changing icon sizes no longer emits signal
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_icons (other bugs)
Version First Reported In: 5.18.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-25 15:50 UTC by Martin Koller
Modified: 2020-04-30 07:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2020-04-25 15:50:18 UTC
in liquidshell I'm using

  connect(KIconLoader::global(), &KIconLoader::iconLoaderSettingsChanged, this, &StartMenu::adjustIconSize);

to be informed whenever the icon sizes get changed in systemsettings.
I don't know since when but at least in version

Operating System: openSUSE Tumbleweed 20200419
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.1

I no longer receive this signal.

---------------
This was also confirmed by "Friedrich W. H. Kossebau" in a mail saying:

I can confirm that changing icon sizes in Plasma Systemsettings and clicking 
apply seems to have no effect also for all other places which would adapt to 
those values, like KXmlGui-driven toolbars (which also by a quick check seems 
to connect to that signal). The changed sizes are only picked up by newly 
started instances of programs.
I am also on openSUSE TW with same versions. Also not sure when I saw this 
working the last time.

Given the API dox of KIconLoader does not note that signal is deprecated, I 
would assume this signal is still to be used (and main.cpp of the icon kcm 
seems to call KIconLoader::emitChange(...), which should trigger the signal 
via D-Bus in all client side, from a peek view at code path.
Comment 1 Cyril Rossi 2020-04-30 07:54:01 UTC
Git commit 9bbd2645626e574308c631a9e4adc312283df387 by Cyril Rossi.
Committed on 30/04/2020 at 07:53.
Pushed by crossi into branch 'Plasma/5.18'.

KCM Icons : Use KIconloader::emitChange() instead of deprecated newIconLoader()

Summary:
Changing the icon size should emits `KIconloader::iconLoaderSettingsChanged` as well
FIXED-IN: 5.18.5

Reviewers: #plasma, bport, broulik

Reviewed By: #plasma, bport, broulik

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29285

M  +10   -6    kcms/icons/iconsizecategorymodel.cpp
M  +3    -1    kcms/icons/iconsizecategorymodel.h
M  +15   -4    kcms/icons/main.cpp

https://commits.kde.org/plasma-desktop/9bbd2645626e574308c631a9e4adc312283df387