KCM Icons : Use KIconloader::emitChange() instead of deprecated newIconLoader()

Summary:
Changing the icon size should emits `KIconloader::iconLoaderSettingsChanged` as well

BUG: 420577
FIXED-IN: 5.18.5

Reviewers: #plasma, bport, broulik

Reviewed By: #plasma, bport, broulik

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29285