kcms/icons/iconsizecategorymodel.h
@@ -25,6 +25,7 @@ struct IconSizeCategoryModelData
     QString configKey;
     QString display;
     QString configSection;
+    int kIconloaderGroup;
 };
 
 Q_DECLARE_TYPEINFO(IconSizeCategoryModelData, Q_MOVABLE_TYPE);
@@ -39,7 +40,8 @@ public:
 
     enum Roles {
         ConfigKeyRole = Qt::UserRole + 1,
-        ConfigSectionRole
+        ConfigSectionRole,
+        KIconLoaderGroupRole,
     };
 
     int rowCount(const QModelIndex &parent = QModelIndex()) const override;
